<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cerebral EFFect</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="generatemission">new mission</string>
    <string name="eventtitle">Marauders</string>
    <string name="temporary">temporary string resource</string>
    <string name="getmissionresult">get mission result</string>
    <string name="form_create_user">log in or create a new user</string>
    <string name="type_clanname">Type your clannname</string>
    <string name="type_password">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm">confirm</string>
    <string name="password_size">minimum five letters</string>
    <color name="ok_green">#006600</color>
    <color name="error_red">#FF0000</color>
    <color name="selected_blue">#000099</color>
    <string name="form_create_user_description">Type in your username and password. If your username is not found, you will be prompted to create a new account.</string>
    <color name="holo_blue">#6699FF</color>
    <string name="should_have_been">clearly something is amiss</string>
    <string name="confirm_create_user">Confirm New User</string>
    <string name="login">Log in</string>

</resources>